finished quiz portion working on endgame function

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <h1 class="welcome">Ready to test you brain?</h1>
         <h3 class="info">Here you wil be tested on your knowledge about javascript. Each wrong answer takes 5 seconds away. Take your time you have 45 seconds to begin with. GOOD LUCK!</h3>
         <button class="st-btn" id="start">Start Quiz</button>
+        <div class="end"></div>
         <div class="result"></div>
     </main>
         
