messed with another feature took it back out

--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
     <header class="head">
         <a href="" class="highscore">HighScores</a>
         <div class="timer">Time:
-            <span id="time">45</span>
+            <span id="time">30</span>
         </div>
     </header>
     <main class="main">
         <h1 class="welcome">Ready to test you brain?</h1>
-        <h3 class="info">Here you wil be tested on your knowledge about javascript. Each wrong answer takes 5 seconds away. Take your time you have 45 seconds to begin with. GOOD LUCK!</h3>
+        <h3 class="info">Here you will be tested on your knowledge about javascript. Consists of 5 questions were each wrong answer takes 5 seconds away and every correct answer will give you 3 seconds back. Take your time you have 30 seconds to begin with. GOOD LUCK!</h3>
         <button class="st-btn" id="start">Start Quiz</button>
         <div class="end"></div>
         <div class="result"></div>
