got game to end after questions and stop the timer

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 </head>
 <body>
     <header class="head">
-        <a href="" class="highscore">HighScores</a>
+        <button class="highscore">High Sores</button>
         <div class="timer">Time:
-            <span id="time">30</span>
+            <span class="time">30</span>
         </div>
     </header>
     <main class="main">
