--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 </head>
 <body>
     <header class="head">
-        <button class="highscore">High Sores</button>
+        <button class="highscore">High Score</button>
+        <a class="reset" href="index.html">Try Again</a>
         <div class="timer">Time:
             <span class="time">30</span>
         </div>
